--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,14 @@ body {
     border: 2px solid pink;
 }
 
+.overduetodo, .currenttodo {
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .footer {
     display: grid;
     grid-column: 1 / -1;
